--- a/app/views/customers/_customer.html.erb
+++ b/app/views/customers/_customer.html.erb
@@ -1,1 +1,13 @@
-<% %>
+<div class="customer">
+  <%= link_to 'edit', edit_customer_path(customer) %>
+  <%= link_to 'x', customer, method: :delete, data: { confirm: 'Are you sure?' } %>
+  <h2><%= customer.full_name %></h2>
+  <% if customer.image.present? %>
+    <%= image_tag customer.image  %>
+  <% else %>
+    <%= customer.image %>
+  <% end %>
+  <p class="label">Phone: <%= customer.phone_number %></p>
+  <p class="label">Email: <%= customer.email_address %></p>
+  <p class="label">Notes: <%= customer.notes %></p>
+</div>
