--- a/app/views/customers/show.html.erb
+++ b/app/views/customers/show.html.erb
@@ -6,6 +6,11 @@
 </p>
 
 <p>
+  <strong>Province:</strong>
+  <%= @customer.province.name %>
+</p>
+
+<p>
   <strong>Phone number:</strong>
   <%= @customer.phone_number %>
 </p>
@@ -26,4 +31,4 @@
 </p>
 
 <%= link_to 'Edit', edit_customer_path(@customer) %> |
-<%= link_to 'Back', customers_path %>
+<%= link_to 'Back', root_path %>
